2011-04-06  Werner Koch  <wk@g10code.com>

	* autogen.sh: Check the git setup.  Add option --build-w64.
	* configure.ac (HAVE_W64_SYSTEM): Define.

	* m4/gpg-error.m4: Update from current libgpg-error repo.

2011-03-28  Werner Koch  <wk@g10code.com>

	* configure.ac (AC_CHECK_HEADERS): Check for sys/select.h which is
	needed by one test utility.

2010-12-23  Werner Koch  <wk@g10code.com>

	* configure.ac: Add a git commit identifier to the version.

2010-11-01  Marcus Brinkmann  <marcus@g10code.de>

	* configure.ac: Check for fcntl.h.

2010-11-01  Werner Koch  <wk@g10code.com>

	* configure.ac: Check for sys/types.h, sys/stat.h, sys/time and
	unistd.h

2010-08-19  Werner Koch  <wk@g10code.com>

	* configure.ac (AH_TOP, AH_BOTTOM): New.  Define
	GPG_ERR_ENABLE_ERRNO_MACROS.

2010-08-09  Werner Koch  <wk@g10code.com>

	Release 2.0.1

	* configure.ac: Set LT version to C1/A1/R0.

2010-04-20  Werner Koch  <wk@g10code.com>

	* configure.ac: Change wording of the no-funopen warning.

2010-03-22  Werner Koch  <wk@g10code.com>

	* configure.ac (CC_FOR_BUILD): Add test.

2010-03-17  Werner Koch  <wk@g10code.com>

	* tests/ChangeLog: New.  Move all relevant entries to there.

2010-02-25  Werner Koch  <wk@g10code.com>

	* m4/libtool.m4 (_LT_CHECK_MAGIC_METHOD): Fix for non x86 mingw
	targets.

2010-02-11  Werner Koch  <wk@g10code.com>

	* configure.ac (inet_pton): Check for it.

2010-02-04  Werner Koch  <wk@g10code.com>

	* configure.ac (AC_TYPE_UINT16_T): New.

2010-01-26  Werner Koch  <wk@g10code.com>

	* configure.ac (NETLIBS) [W32CE]: Use -lws2.

2010-01-22  Werner Koch  <wk@g10code.com>

	* configure.ac: Require libgpg-error 1.8.
	(HAVE_W32CE_SYSTEM): New am_defines and am_conditionals.
	* ltmain.sh (wrappers_required): Don't set for mingw32ce.
	* autogen.sh: Add option --build-w32ce.  Remove --disable-shared
	from --build-w32.

2010-01-08  Marcus Brinkmann  <marcus@g10code.de>

	Released 2.0.0.

2010-01-05  Marcus Brinkmann  <marcus@g10code.de>
