@@ -2,6 +2,7 @@
 
 	* autogen.sh: Check the git setup.  Add option --build-w64.
 	* configure.ac (HAVE_W64_SYSTEM): Define.
+	(LIBGCRYPT_CONFIG_HOST): New.
 
 	* m4/gpg-error.m4: Update from current libgpg-error repo.
 
